# feeds-service

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE  README.md
.github/workflows/: ccpp.yml
client/macosx/FeedsServiceClient/: AppDelegate.swift  ViewController.swift
client/macosx/FeedsServiceClient.xcodeproj/: project.pbxproj
client/macosx/FeedsServiceClient.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
client/macosx/FeedsServiceClient/Assets.xcassets/MenuIcon.imageset/: Contents.json
client/macosx/FeedsServiceClient/Base.lproj/: Main.storyboard
client/macosx/FeedsServiceClient/Custom Views/: DateTimeView.swift  DateTimeView.xib  LoadableView.swift  PreferencesView.swift  PreferencesView.xib
cmake/: AddSubModule.cmake  ExternalCMakeArgs.cmake  FeedsDefaults.cmake  GitCommitId.cmake  RPiToolchain.cmake
darwin/: AppIcon.icns  feedsd.sh
debian/: conffiles  config  control  feedsd.init  feedsd.service  postinst  postrm  preinst  prerm  templates
doc/: auto-update.md  code-structure.md  feeds_rpc.md  feeds_rpc_auth.md  feeds_rpc_legacy.md  migrate-onedrive.md  release-version.md
doc/rpc/: feeds_rpc_channel.md  feeds_rpc_massdata.md
docker/: Dockerfile
scripts/: ela-feedsd.service  ela-feedsd.sh  feedsd.service  feedsd.sh  feedsd.sh.in  make-deb.sh
src/: CMakeLists.txt  auth.c  auth.h  cfg.c  cfg.h  config.c  config.h  db.c  db.cpp  db.h  did.c  did.h  err.c  err.h  feeds.c  feeds.conf  feeds.h  feedsd.conf  feedsd.conf.in  jsonrpc.c  jsonrpc.h  main.c  main.cpp  msgq.c  msgq.cpp  msgq.h  obj.h  rpc.c  rpc.h  service_feeds.c  ver.h  ver.h.in
src/autoupdate/: AutoUpdate.cpp  AutoUpdate.hpp  AutoUpdateHelper.cpp  CMakeLists.txt
src/c-vector/: cvector.h
src/clouddrive/: CMakeLists.txt  CloudDrive.cpp  CloudDrive.hpp  OneDrive.cpp  OneDrive.hpp
src/cmdhandler/: CMakeLists.txt  ChannelMethod.cpp  ChannelMethod.hpp  CommandHandler.cpp  CommandHandler.hpp  LegacyMethod.cpp  LegacyMethod.hpp  MassData.cpp  MassData.hpp  ServiceMethod.cpp  ServiceMethod.hpp  StandardAuth.cpp  StandardAuth.hpp
src/common/: CMakeLists.txt  DateTime.hpp  ErrCode.cpp  ErrCode.hpp  Log.cpp  Log.hpp  Random.hpp  SafePtr.hpp  Semaphore.hpp  StdFileSystem.hpp  ThreadPool.cpp  ThreadPool.hpp  taskthread.hpp.bak
src/common/platform/: CMakeLists.txt  Platform.hpp  PlatformAndroid.cpp  PlatformAndroid.hpp  PlatformDarwin.cpp  PlatformDarwin.hpp  PlatformIos.cpp  PlatformIos.hpp  PlatformUnixLike.cpp  PlatformUnixLike.hpp
src/feeds_client/: cfg.c  cfg.h  feeds_cli.c  feeds_cli.conf  feeds_client.c  feeds_client.h
src/feedsd-ext/: CMakeLists.txt  DataBase.cpp  DataBase.hpp  MsgPackExtension.hpp  RpcDeclare.hpp  RpcFactory.cpp  RpcFactory.hpp
src/massdata/: CMakeLists.txt  CarrierSession.cpp  CarrierSession.hpp  CarrierSessionHelper.cpp  CarrierSessionHelper.hpp  MassDataManager.cpp  MassDataManager.hpp  MassDataProcessor.cpp  MassDataProcessor.hpp  SessionParser.cpp  SessionParser.hpp
src/utils/: CMakeLists.txt  DataBase.cpp  DataBase.hpp  DateTime.hpp  ErrCode.cpp  ErrCode.hpp  HttpClient.cpp  HttpClient.hpp  Log.cpp  Log.hpp  MD5.cpp  MD5.hpp  MsgPackExtension.hpp  Random.hpp  RpcDeclare.hpp  RpcFactory.cpp  RpcFactory.hpp  SafePtr.hpp  StdFileSystem.hpp  ThreadPool.cpp  ThreadPool.hpp
src/utils/platform/: Platform.hpp  PlatformDarwin.cpp  PlatformDarwin.hpp  PlatformUnixLike.cpp  PlatformUnixLike.hpp
test/: CMakeLists.txt  FeedsClient.cpp  FeedsClient.hpp
test/common/: Base58.cpp  Base58.hpp  Base64.hpp  CMakeLists.txt  CompatibleFileSystem.hpp  DateTime.hpp  EnumMask.hpp  ErrCode.cpp  ErrCode.hpp  ThreadPool.cpp  ThreadPool.hpp
test/platform/: CMakeLists.txt  Platform.hpp  PlatformDarwin.cpp  PlatformUnixLike.hpp
tests/: CMakeLists.txt  config.c  config.h  launcher.c  main.c  robot.c  test.c  tests.conf
tests/suites/: case.h  suite.h  suites.h
tests/suites/feeds_suite/: feeds_suite.c  feeds_suite.h
